--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,6 +1,7 @@
 FROM public.ecr.aws/amazonlinux/amazonlinux:latest
 
 RUN yum update -y
+RUN yum install -y make git gcc-c++
 
 # install python
 RUN yum install python3 -y
